NTP: Fix the size of the most visited settings button so that the image is not cut off.
BUG=54864
TEST=Open NTP and look at the wrench icon of the most visited section.

Review URL: http://codereview.chromium.org/3362014

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@58954 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 829a0c65bbded9a3262d5164e612ebdbc961d3c5

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -333,11 +333,11 @@ html[dir=rtl] .section > h2 .settings-wrapper {
   background-position: center center;
   background-repeat: no-repeat;
   border: 0;
-  height: 11px;
+  height: 13px;
   left: 5px;
   position: absolute;
   top: 5px;
-  width: 11px;
+  width: 13px;
 }
 
 .section.hidden > h2 .settings-wrapper {
